<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@drawable/ic_action_invite_friends"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/nav_invites"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="Invites" />

        <item
            android:id="@+id/nav_nearby_users"
            android:icon="@drawable/ic_person_nearby_user"
            android:title="Nearby Users" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="My Games" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_log_out"
            android:title="@string/logout" />
    </group>

</menu>